# Vortex

./: .clang-format  .gdbinit  .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json  main.cpp
.github/workflows/: cmake-single-platform.yml
casestudy/io_uring/: CMakeLists.txt  io_uring.cpp
config/: config.json  config.yaml
docker/: Dockerfile
include/vortex/: io_handle.h  service_node.h  sys_calls.h
include/vortex/balancer/: cluster.h  components_factory.h
include/vortex/event/: async_event.h  dispatcher.h  io_uring_core.h
include/vortex/net/: connection.h  io_handle.h  socket.h  tcp_connection_pool.h
include/vortex/upstream/: upstream.h
src/: CMakeLists.txt  Defines.h  Vortex.h  VortexApp.cpp  VortexApp.h  vortex_app.cpp  vortex_app.h
src/common/: address.cpp  address.h  error_helper.h  platform.h  sys_calls_impl.cpp  sys_calls_impl.h  traits.h
src/core/: CMakeLists.txt  ConnectionAcceptor.cpp  ConnectionAcceptor.h  ProcessManager.cpp  ProcessManager.h  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h  TcpServer.cpp  TcpServer.h  components_factory_impl.cpp  components_factory_impl.h  connection_acceptor.cpp  connection_acceptor.h  connection_manager.cpp  connection_manager.h  process_manager.cpp  process_manager.h  service_node.cpp  service_node.h  service_node_impl.cpp  service_node_impl.h  socket.cpp  socket.h  socket_impl.cpp  socket_impl.h  tcp_server.cpp  tcp_server.h  utils.h
src/core/balancer/: backend_impl.cpp  backend_impl.h  cluster_impl.cpp  cluster_impl.h  cluster_manager_impl.cpp  cluster_manager_impl.h
src/core/client/: client_connection.cpp  client_connection.h
src/core/config/: Config.cpp  Config.h  ConfigLoader.cpp  ConfigLoader.h  config.cpp  config.h  config_loader.cpp  config_loader.h  config_manager.cpp  config_manager.h  parser_interface.h  types.h  yaml_parser.cpp  yaml_parser.h
src/core/interfaces/: async_socket.h  cluster.h  components_factory.h  connection_acceptor.h  io_handle.h  socket.h  socket_event_handler.h  socket_factory.h  socket_handle.h  sys_calls.h
src/core/interfaces/event/: async_event.h  dispatcher.h  io_uring.h  io_uring_core.h  io_uring_socket.h  io_uring_worker.h
src/core/io/: io_uring_dispacher_impl.cpp  io_uring_dispacher_impl.h  socket_io_handle_impl.cpp  socket_io_handle_impl.h
src/core/listener/: listener_manager.h
src/core/logger/: logger.h
src/core/net/: client_connection_impl.cpp  client_connection_impl.h  connection_factory_impl.cpp  connection_factory_impl.h  socket_impl.cpp  socket_impl.h  tcp_conn_pool_impl.cpp  tcp_conn_pool_impl.h
src/core/server/: server_connection.cpp  server_connection.h
src/core/worker/: WorkerProcess.cpp  WorkerProcess.h  worker_process.cpp  worker_process.h
src/event/: CMakeLists.txt  EPoll.cpp  EPoll.h  Event.cpp  Event.h  EventDefines.h  EventHandler.cpp  EventHandler.h  EventLoop.cpp  EventLoop.h  IoUring.cpp  IoUring.h  IoUringSocket.cpp  IoUringSocket.h  IoUringWorker.cpp  IoUringWorker.h  io_uring_core.cpp  io_uring_core.h  io_uring_core_impl.cpp  io_uring_core_impl.h  io_uring_socket.cpp  io_uring_socket.h  io_uring_socket_factory.cpp  io_uring_socket_factory.h  io_uring_socket_impl.cpp  io_uring_socket_impl.h  io_uring_worker.cpp  io_uring_worker.h  io_uring_worker_impl.cpp  io_uring_worker_impl.h
test/cpp/: CMakeLists.txt
test/cpp/event/: event_test.cpp
test/go/: run_containers.go
test/go/test-servers/: Dockerfile  docker-compose.yml  go.mod  main.go  tcp_server.go
